<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_item_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_hint"
        android:autofillHints="itemName"
        android:padding="8dp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_hint"
        android:autofillHints="quantity"
        android:padding="8dp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_hint"
        android:autofillHints="price"
        android:padding="8dp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save" />
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete" />

</LinearLayout>
