<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/baseline_person_24"
        android:hint="@string/username" />

    <Spinner
        android:id="@+id/spinner_role"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/role" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edittext_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:hint="@string/password"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edittext_cnf_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:hint="@string/confirm_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/login_register"
            android:textColor="#6200ED"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>